--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "etag": "^1.8.1",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
